{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 67,
  "lineage": "dff62597-1184-8930-c626-e841f2f51ab2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee1d3f4435f6e3a2",
            "association_id": "eipassoc-057091283af7cebe9",
            "domain": "vpc",
            "id": "eipalloc-0ee1d3f4435f6e3a2",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0c0f2e6568bf53f75",
            "private_dns": "ip-172-16-0-222.ap-south-1.compute.internal",
            "private_ip": "172.16.0.222",
            "public_dns": "ec2-13-201-146-149.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.146.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jdoodle-nat-elastic-ip"
            },
            "tags_all": {
              "Name": "jdoodle-nat-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024566704690:internet-gateway/igw-0190236326c70b634",
            "id": "igw-0190236326c70b634",
            "owner_id": "024566704690",
            "tags": {
              "Name": "jdoodle-internet-gateway"
            },
            "tags_all": {
              "Name": "jdoodle-internet-gateway"
            },
            "vpc_id": "vpc-0ac32147e232df412"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:024566704690:loadbalancer/app/jdoodle-external-alb/1548e1d7ebccb477",
            "arn_suffix": "app/jdoodle-external-alb/1548e1d7ebccb477",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jdoodle-external-alb-1694287531.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:024566704690:loadbalancer/app/jdoodle-external-alb/1548e1d7ebccb477",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jdoodle-external-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b277d78466434053"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09d7558c702e0fdef"
              },
              {
                "subnet_id": "subnet-0d0a96aab95088dd5"
              }
            ],
            "subnets": [
              "subnet-09d7558c702e0fdef",
              "subnet-0d0a96aab95088dd5"
            ],
            "vpc_id": "vpc-0ac32147e232df412",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:024566704690:listener/app/jdoodle-external-alb/1548e1d7ebccb477/cd0443f4d23c7b7b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:024566704690:targetgroup/jdoodle-alb-target-group/b2d9e76b224e235b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:024566704690:listener/app/jdoodle-external-alb/1548e1d7ebccb477/cd0443f4d23c7b7b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:024566704690:loadbalancer/app/jdoodle-external-alb/1548e1d7ebccb477",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:024566704690:targetgroup/jdoodle-alb-target-group/b2d9e76b224e235b",
            "arn_suffix": "targetgroup/jdoodle-alb-target-group/b2d9e76b224e235b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:024566704690:targetgroup/jdoodle-alb-target-group/b2d9e76b224e235b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jdoodle-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ac32147e232df412"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee1d3f4435f6e3a2",
            "association_id": "eipassoc-057091283af7cebe9",
            "connectivity_type": "public",
            "id": "nat-04a4a6d594dc9bf35",
            "network_interface_id": "eni-0c0f2e6568bf53f75",
            "private_ip": "172.16.0.222",
            "public_ip": "13.201.146.149",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09d7558c702e0fdef",
            "tags": {
              "Name": "jdoodle-nat-gateway"
            },
            "tags_all": {
              "Name": "jdoodle-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024566704690:route-table/rtb-077961442e071f45a",
            "id": "rtb-077961442e071f45a",
            "owner_id": "024566704690",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04a4a6d594dc9bf35",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jdoodle-private-route-table"
            },
            "tags_all": {
              "Name": "jdoodle-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac32147e232df412"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024566704690:route-table/rtb-00c6d7967a2a5580f",
            "id": "rtb-00c6d7967a2a5580f",
            "owner_id": "024566704690",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0190236326c70b634",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jdoodle-public-route-table"
            },
            "tags_all": {
              "Name": "jdoodle-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac32147e232df412"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ba47ade6a1e19c3",
            "route_table_id": "rtb-077961442e071f45a",
            "subnet_id": "subnet-02b8b39e3e974d1af"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02053390e8703f2c7",
            "route_table_id": "rtb-077961442e071f45a",
            "subnet_id": "subnet-0388add6a55e992e6"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f46af0f3b1624146",
            "route_table_id": "rtb-00c6d7967a2a5580f",
            "subnet_id": "subnet-09d7558c702e0fdef"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a2d816e77f92b9f",
            "route_table_id": "rtb-00c6d7967a2a5580f",
            "subnet_id": "subnet-0d0a96aab95088dd5"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024566704690:security-group/sg-0b277d78466434053",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b277d78466434053",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jdoodle-alb-security-group",
            "name_prefix": "",
            "owner_id": "024566704690",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jdoodle-alb-security-group"
            },
            "tags_all": {
              "Name": "jdoodle-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac32147e232df412"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024566704690:security-group/sg-049f2aed6100df778",
            "description": "ASG Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049f2aed6100df778",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b277d78466434053"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jdoodle-asg-security-group",
            "name_prefix": "",
            "owner_id": "024566704690",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jdoodle-asg-security-group"
            },
            "tags_all": {
              "Name": "jdoodle-asg-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac32147e232df412"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024566704690:subnet/subnet-02b8b39e3e974d1af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b8b39e3e974d1af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024566704690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jdoodle-private-subnet-ap-south-1a"
            },
            "tags_all": {
              "Name": "jdoodle-private-subnet-ap-south-1a"
            },
            "vpc_id": "vpc-0ac32147e232df412"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024566704690:subnet/subnet-0388add6a55e992e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0388add6a55e992e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024566704690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jdoodle-private-subnet-ap-south-1b"
            },
            "tags_all": {
              "Name": "jdoodle-private-subnet-ap-south-1b"
            },
            "vpc_id": "vpc-0ac32147e232df412"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024566704690:subnet/subnet-09d7558c702e0fdef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d7558c702e0fdef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024566704690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jdoodle-public-subnet-ap-south-1a"
            },
            "tags_all": {
              "Name": "jdoodle-public-subnet-ap-south-1a"
            },
            "vpc_id": "vpc-0ac32147e232df412"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024566704690:subnet/subnet-0d0a96aab95088dd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0a96aab95088dd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024566704690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jdoodle-public-subnet-ap-south-1b"
            },
            "tags_all": {
              "Name": "jdoodle-public-subnet-ap-south-1b"
            },
            "vpc_id": "vpc-0ac32147e232df412"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:024566704690:vpc/vpc-0ac32147e232df412",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-08faa0de5c6e69268",
            "default_route_table_id": "rtb-05df3d436ca62866d",
            "default_security_group_id": "sg-03da3062e040972b6",
            "dhcp_options_id": "dopt-0b6921c9c481c7d11",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac32147e232df412",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05df3d436ca62866d",
            "owner_id": "024566704690",
            "tags": {
              "Name": "jdoodle-vpc"
            },
            "tags_all": {
              "Name": "jdoodle-vpc"
            }
          }
        }
      ]
    }
  ]
}